# mezbon_ai

./: .env.example  .gitignore  BUGS_FIXED.md  CLAUDE.md  CLAUDE_CODE_5_STEPS.md  CLOUD_DEPLOYMENT_GUIDE.md  CONTABO_DEPLOYMENT.md  FULL-SYSTEM-AUDIT.md  GIT_SETUP.md  KIOSK-CRITICAL-FIXES-V2.md  KIOSK-CRITICAL-FIXES.md  MUXLISA_FIX.md  NANO-MEDICAL-SEED-PROMPT.md  PREMIUM-UI-REDESIGN.md  PRINTER_NETWORK_SETUP.md  PRINTER_README.md  PRINTER_SETUP.md  PRINTER_STATUS.md  PRINTER_TESTING.md  PRODUCTION-FIX-AND-KIOSK-SETUP.md  RECOMMENDATIONS.md  SIMPLE_FIX_NOW.md  START_HERE.md  TEST_REPORT.md  VOICE_DIAGNOSTIC_MASTER.md  VOICE_FIX_CLAUDE_CODE.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  git_setup.sh
backend/: .env.example  Dockerfile  alembic.ini  auto_fix_voice.py  enable_mock_stt.sh  kiosk_print_server.py  mezbon_print_proxy.py  pyproject.toml  requirements.txt  start_print_proxy.bat
backend/alembic/: env.py
backend/alembic/versions/: fa080a235ff1_initial_schema.py
backend/app/: config.py  main.py
backend/app/ai/: __init__.py  face_service.py  gemini_service.py  google_stt.py  muxlisa_service.py  orchestrator.py  session_manager.py
backend/app/api/: analytics.py  appointments.py  auth.py  content.py  departments.py  deps.py  devices.py  doctors.py  faq.py  health.py  patients.py  payments.py  printer.py  queue.py  services.py
backend/app/core/: database.py  encryption.py  exceptions.py  logger.py  middleware.py  (+3 more)
backend/scripts/: seed.py  test_all_ai.py  test_brain.py  test_muxlisa.py  test_socketio.py  test_voice_pipeline.py
backend/tests/: conftest.py  test_ai_face.py  test_ai_gemini.py  test_ai_muxlisa.py  test_ai_orchestrator.py  test_appointments.py  test_auth.py  test_departments.py  test_doctors.py  test_e2e_visitor.py  test_patients.py  test_payments.py  test_queue.py  test_session_machine.py  test_socketio.py
(+193 files in other folders)
