[project]
name = "mezbon-clinic-backend"
version = "0.1.0"
description = "Mezbon AI — Clinic Reception System Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.1",
    "redis[hiredis]>=5.2.1",
    "google-generativeai>=0.8.4",
    "insightface>=0.7.3",
    "onnxruntime>=1.20.1",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.4",
    "pillow>=11.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=44.0.0",
    "python-socketio>=5.12.1",
    "aiohttp>=3.11.11",
    "loguru>=0.7.3",
    "arq>=0.26.1",
    "aioboto3>=13.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "insightface.*",
    "google.generativeai.*",
    "socketio.*",
    "arq.*",
    "aioboto3.*",
    "passlib.*",
    "jose.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
